<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
    android:id="@+id/atm_menu"
    android:icon="@drawable/ic_outline_atm_24px"
    android:title="@string/atm"
    app:showAsAction="always"/>
    <item
        android:id="@+id/bank_menu"
        android:icon="@drawable/ic_outline_account_balance_24px"
        android:title="@string/bank"
        app:showAsAction="always"/>
    <item
    android:id="@+id/bar_menu"
    android:icon="@drawable/ic_glass_cocktail"
    android:title="@string/bar"
    app:showAsAction="always"/>
    <item
        android:id="@+id/bus_station_menu"
        android:icon="@drawable/ic_bus"
        android:title="@string/bus_station"
        app:showAsAction="always"/>
    <item
        android:id="@+id/cafe_menu"
        android:icon="@drawable/ic_outline_local_cafe_24px"
        android:title="@string/bakery"
        app:showAsAction="always"/>
    <item
        android:id="@+id/car_wash_menu"
        android:icon="@drawable/ic_car_wash"
        android:title="@string/car_wash"
        app:showAsAction="always"/>
    <item
        android:id="@+id/gas_station_menu"
        android:icon="@drawable/ic_outline_local_gas_station_24px"
        android:title="@string/gas_station"
        app:showAsAction="always"/>
    <item
        android:id="@+id/hospital_menu"
        android:icon="@drawable/ic_outline_hotel_24px"
        android:title="HOSPITAL"
        app:showAsAction="always"/>
    <item
        android:id="@+id/pharmacy_menu"
        android:icon="@drawable/ic_pharmacy"
        android:title="@string/pharmacy"
        app:showAsAction="always"/>
    <item
        android:id="@+id/restaurant"
        android:icon="@drawable/ic_silverware_fork_knife"
        android:title="@string/restaurant"
        app:showAsAction="always"/>
    <item
        android:id="@+id/school_menu"
        android:icon="@drawable/ic_outline_school_24px"
        android:title="@string/school"
        app:showAsAction="always"/>
    <item
        android:id="@+id/shop_menu"
        android:icon="@drawable/ic_outline_shopping_cart_24px"
        android:title="@string/store"
        app:showAsAction="always"/>
    <item
        android:id="@+id/taxi_menu"
        android:icon="@drawable/ic_taxi"
        android:title="@string/taxi_station"
        app:showAsAction="always"/>

    <item
        android:id="@+id/train_menu"
        android:icon="@drawable/ic_train"
        android:title="@string/train_station"
        app:showAsAction="always"/>


</menu>