<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".helpSupport.HelpSupport"
    android:orientation="vertical"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_at_help"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:fitsSystemWindows="true"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
        app:title="@string/help"
        app:titleTextColor="@color/white"
        android:background="@color/material_new_grey_strong_100"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/toolbar_shadow"
        />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:src="@drawable/splash_icon"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/help_logo_icon"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:layout_marginBottom="60dp"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/new_material_grey_50"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descriptions"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textColor="@color/material_new_brown_strong_50"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_detail"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textColor="@color/material_new_brown_strong_50"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:layout_gravity="bottom"
                android:textSize="19sp"
                />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/add"
                android:src="@drawable/add_new"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/_1_dis"
           android:layout_marginStart="55dp"
           android:layout_marginEnd="10dp"
           />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="10dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:layout_gravity="bottom"
                android:textSize="19sp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:contentDescription="@string/add"
                android:src="@drawable/display_near_items"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_dis"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:layout_gravity="bottom"
                android:textSize="19sp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:contentDescription="@string/add"
                android:src="@drawable/marker"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_dis"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:layout_gravity="bottom"
                android:textSize="19sp"
                />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:contentDescription="@string/add"
                android:src="@drawable/location"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4_dis"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:layout_gravity="bottom"
                android:textSize="19sp"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/add"
                android:src="@drawable/refresh"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_dis"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:layout_gravity="bottom"
                android:textSize="19sp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="60dp"
                android:contentDescription="@string/add"
                android:src="@drawable/to"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6_dis"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="10dp"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developed_by"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textColor="@color/material_new_brown_strong_50"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_developed_dis"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rovalbenny_gmail_com"
            android:textIsSelectable="true"
            android:textColor="@color/colorBlue"
            android:layout_marginStart="45dp"
            />

    </LinearLayout>


    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>